--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,40 @@
 <html>
-<head>
-  <title>Comments</title>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-  <script src="javascripts/app.js"></script>
+  <head>
+    <title>Map Markers</title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="stylesheets/style.css" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+  </head>
 
-</head>
-<body ng-app="comment" ng-controller="MainCtrl">
-<div class="row">
-<div class="col-md-6 col-md-offset-3">
-<div class="page-header"> 
-  <h1>Comments </h1>
-</div>
+  <body ng-app="myApp" ng-directive="myMap">
+    <!-- Header/Title -->
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div class="page-header">
+          <h1>Creativity Lab 5 -- Map Markers</h1>
+        </div>
+      </div>
+    </div>
 
-  <form ng-submit="addComment()" style = "margin-top30px;">
-    <input type="text" ng-model="formContent"></input>
-    <button type="submit">Add Comment</button>
-  </form>
-  <div>
-    {{test}}
-  </div>
-  <div ng-repeat="comment in comments | orderBy: '-upvotes'">
-    <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span>
-    {{comment.title}} - upvotes: {{comment.upvotes}}
-  </div>
-</div>
-</div>
-</body>
+    <!-- New Marker Form -->
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <form ng-submit="setMarker()" style = "margin-top30px;">
+          <input type="text" ng-model="formContent"></input>
+          <button type="submit">Add Marker</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Map -->
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div my-map=""></div>
+      </div>
+    </div>
+
+    <!-- Google Maps API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDMbK55uNwYtDoUae_gppqAHY5r8SD56hk"></script>
+    <script src="javascripts/app.js"></script>
+  </body>
 </html>
